--- a/less/body.less
+++ b/less/body.less
@@ -79,13 +79,15 @@
 		width: 30%;
 		margin: 0 auto;
 		padding-bottom: 5%;
+		margin-right:37%;
 		@media @500 {
 			width: 100%;
 			padding-top: 5%;
 		} // close media for .searchBar form
 	}
 	label {
-		padding-left: 30%;
+		padding-left: 32%;
+		padding-bottom:2%;
 		font-size: 1.5em;
 	}
 	input {
@@ -99,6 +101,7 @@
 	}
 	button {
 		.button(30%, @softPurple, @tagFont);
+		margin-left: 40%;
 		@media @500 {
 			margin-left: 38%;
 		} // close media for button
